--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+  
+  }
+
+  html {
+    scroll-behavior: smooth;
+  }
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  body {
+    font-family: 'Josefin Slab', serif;
+    background: var(--bg-color);
+    line-height: 1.7;
+    
+  
+  } 
+
+  
