--- a/src/components/layout/header/header.css
+++ b/src/components/layout/header/header.css
@@ -13,14 +13,16 @@
     font-size: 18px;
 }
 .eventos{
-    color: #1E1E1E;
-    border: 2px solid #1E1E1E;
+    color: #005B46;
+    border: 2px solid #005B46;
     background-color: transparent;
+    border-radius: 8px;
 }
 .postulate{
     color: #FFFFFF;
-    border: 3px solid #1E1E1E;
-    background-color: #1E1E1E;
+    border: 3px solid #005B46;
+    background-color: #005B46;
+    border-radius: 8px;
 }
 
 .activado{
