--- a/src/pages/home/styles/banner.css
+++ b/src/pages/home/styles/banner.css
@@ -26,11 +26,11 @@
     height: 44px;
     margin-right: 2rem;
     border: none;
-    background-color: #3C6A73;
+    background-color: #005B46;
     color: #fff;
     font-size: 20px;
     font-weight: 600;
-    border-radius: 6px;
+    border-radius: 1rem;
 }
 .banner-butts button:nth-child(2){
     width: 140px;
